config-file-madness/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pr-pilot-ingress
  namespace: default
  annotations:
    networking.gke.io/managed-certificates: app-pr-pilot-certificate
spec:
  rules:
  - host: app.arcane.engineer
    http:
      paths:
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: nginx-static-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pr-pilot-svc
            port:
              number: 80
